--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </svg>
                     </div>
                     <span class="chatbot__arrow chatbot__arrow--left"></span>
-                    <p class='chatbot__message'>Hi there 🖐. I’m DMcAssist, your virtual assistant. I'm here to help with your general enquiries.</p>
+                    <p class='chatbot__message'>Hi there 🖐. I’m DMcAssist, your virtual assistant. I'm here to help with all your enquiries.</p>
                 </li>
                 <!-- Answer and response added here -->
             </ul>
