--- a/index.html
+++ b/index.html
@@ -2,35 +2,40 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>DMcAssist - your virtual assistant </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="./style.css">
-
+    <meta charset="UTF-8" />
+    <title>DMcAssist - your virtual assistant</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
+    <h1>Welcome to DMcAssist Website.</h1>
     <!-- partial:index.partial.html -->
     <div class="chatbot chatbot--closed">
         <div class="chatbot__header">
-            <p><strong>Got a question?</strong> <span class="u-text-highlight">Ask DMcAssist</span></p>
+            <p>
+                <strong>Got a question?</strong>
+                <span class="u-text-highlight">Ask DMcAssist</span>
+            </p>
             <svg class="chatbot__close-button icon-speech" viewBox="0 0 32 32">
-      <use xlink:href="#icon-speech" />
-    </svg>
+          <use xlink:href="#icon-speech" />
+        </svg>
             <svg class="chatbot__close-button icon-close" viewBox="0 0 32 32">
-      <use xlink:href="#icon-close" />
-    </svg>
+          <use xlink:href="#icon-close" />
+        </svg>
         </div>
         <div class="chatbot__message-window">
             <ul class="chatbot__messages">
                 <li class="is-ai animation">
                     <div class="is-ai__profile-picture">
                         <svg class="icon-avatar" viewBox="0 0 32 32">
-            <use xlink:href="#avatar" />
-          </svg>
+                <use xlink:href="#avatar" />
+              </svg>
                     </div>
                     <span class="chatbot__arrow chatbot__arrow--left"></span>
-                    <p class='chatbot__message'>Hi there 🖐. I’m DMcAssist, your virtual assistant. I'm here to help with all your enquiries.</p>
+                    <p class="chatbot__message">
+                        Hi there 🖐. I’m DMcAssist, your virtual assistant. I'm here to help with all your enquiries.
+                    </p>
                 </li>
                 <!-- Answer and response added here -->
             </ul>
@@ -38,46 +43,210 @@
         <div class="chatbot__entry chatbot--closed">
             <input type="text" class="chatbot__input" placeholder="Write a message..." />
             <svg class="chatbot__submit" viewBox="0 0 32 32">
-      <use xlink:href="#icon-send" />
-    </svg>
+          <use xlink:href="#icon-send" />
+        </svg>
         </div>
     </div>
 
     <!-- Symbols -->
     <svg>
-  <!-- Close icon -->
-  <symbol id="icon-close" viewBox="0 0 32 32">
-    <title>Close</title>
-    <path d="M2.624 8.297l2.963-2.963 23.704 23.704-2.963 2.963-23.704-23.704z" />
-    <path d="M2.624 29.037l23.704-23.704 2.963 2.963-23.704 23.704-2.963-2.963z" />
-  </symbol>
+      <!-- Close icon -->
+      <symbol id="icon-close" viewBox="0 0 32 32">
+        <title>Close</title>
+        <path
+          d="M2.624 8.297l2.963-2.963 23.704 23.704-2.963 2.963-23.704-23.704z"
+        />
+        <path
+          d="M2.624 29.037l23.704-23.704 2.963 2.963-23.704 23.704-2.963-2.963z"
+        />
+      </symbol>
 
-  <!-- Speech icon -->
-  <symbol id="icon-speech" viewBox="0 0 32 32">
-    <title>Speech</title>
-    <path d="M21.795 5.333h-11.413c-0.038 0-0.077 0-0.114 0l-0.134 0.011v2.796c0.143-0.006 0.273-0.009 0.385-0.009h11.277c0.070 0 7.074 0.213 7.074 7.695 0 5.179-2.956 7.695-9.036 7.695h-3.792c-0.691 0-1.12 0.526-1.38 1.159l-1.387 3.093-1.625 3.77 0.245 0.453h2.56l2.538-5.678h2.837c7.633 0 11.84-3.727 11.84-10.494 0.001-8.564-7.313-10.492-9.875-10.492z" />
-    <path d="M10.912 24.259c-0.242-0.442-0.703-0.737-1.234-0.737-0 0-0 0-0 0h-0.56c-0.599-0.011-1.171-0.108-1.71-0.28l0.042 0.012c-1.82-0.559-4.427-2.26-4.427-7.424 0-6.683 5.024-7.597 7.109-7.686v-2.8c-2.042 0.095-9.91 1.067-9.91 10.483 0 4.832 1.961 7.367 3.606 8.64 1.38 1.067 3.109 1.744 4.991 1.843l0.033 0.019 2.805 5.211 1.41-3.273z" />
-  </symbol>
+      <!-- Speech icon -->
+      <symbol id="icon-speech" viewBox="0 0 32 32">
+        <title>Speech</title>
+        <path
+          d="M21.795 5.333h-11.413c-0.038 0-0.077 0-0.114 0l-0.134 0.011v2.796c0.143-0.006 0.273-0.009 0.385-0.009h11.277c0.070 0 7.074 0.213 7.074 7.695 0 5.179-2.956 7.695-9.036 7.695h-3.792c-0.691 0-1.12 0.526-1.38 1.159l-1.387 3.093-1.625 3.77 0.245 0.453h2.56l2.538-5.678h2.837c7.633 0 11.84-3.727 11.84-10.494 0.001-8.564-7.313-10.492-9.875-10.492z"
+        />
+        <path
+          d="M10.912 24.259c-0.242-0.442-0.703-0.737-1.234-0.737-0 0-0 0-0 0h-0.56c-0.599-0.011-1.171-0.108-1.71-0.28l0.042 0.012c-1.82-0.559-4.427-2.26-4.427-7.424 0-6.683 5.024-7.597 7.109-7.686v-2.8c-2.042 0.095-9.91 1.067-9.91 10.483 0 4.832 1.961 7.367 3.606 8.64 1.38 1.067 3.109 1.744 4.991 1.843l0.033 0.019 2.805 5.211 1.41-3.273z"
+        />
+      </symbol>
 
-  <!-- Send icon -->
-  <symbol id="icon-send" viewBox="0 0 23.97 21.9">
-    <title>Send</title>
-    <path d="M0.31,9.43a0.5,0.5,0,0,0,0,.93l8.3,3.23L23.15,0Z"/>
-    <path d="M9,14.6H9V21.4a0.5,0.5,0,0,0,.93.25L13.22,16l6,3.32A0.5,0.5,0,0,0,20,19l4-18.4Z"/>
-  </symbol>
-  
-  <!-- Avatar icon -->
-  <symbol id="avatar" width="32" height="32" viewBox="0 0 44.25 44">
-    <title>Avatar</title>
-    <path style="fill: #7226e0; fill-rule: evenodd;" d="M1035.88,1696.25a22,22,0,1,1-22.13,22A22.065,22.065,0,0,1,1035.88,1696.25Z" transform="translate(-1013.75 -1696.25)"/>
-   <svg id="e4Y6ufnUCcV1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 640 640" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" style="background-color:#fff"><defs><linearGradient id="e4Y6ufnUCcV3-fill" x1="0.489361" y1="-0.00383" x2="0.49637" y2="0.706156" spreadMethod="pad" gradientUnits="objectBoundingBox" gradientTransform="translate(0 0)"><stop id="e4Y6ufnUCcV3-fill-0" offset="0%" stop-color="#152055"/><stop id="e4Y6ufnUCcV3-fill-1" offset="100%" stop-color="#0c0b33"/></linearGradient><linearGradient id="e4Y6ufnUCcV4-fill" x1="0.205284" y1="-0.273163" x2="0.550399" y2="1.124969" spreadMethod="pad" gradientUnits="objectBoundingBox" gradientTransform="translate(0 0)"><stop id="e4Y6ufnUCcV4-fill-0" offset="0%" stop-color="#2cdafa"/><stop id="e4Y6ufnUCcV4-fill-1" offset="100%" stop-color="#002b55"/></linearGradient><linearGradient id="e4Y6ufnUCcV5-fill" x1="0.215154" y1="0.780113" x2="0.756772" y2="0.270218" spreadMethod="pad" gradientUnits="objectBoundingBox" gradientTransform="translate(0 0)"><stop id="e4Y6ufnUCcV5-fill-0" offset="0%" stop-color="#07103a"/><stop id="e4Y6ufnUCcV5-fill-1" offset="100%" stop-color="#7e93ff"/></linearGradient><linearGradient id="e4Y6ufnUCcV8-fill" x1="1.636801" y1="-0.552278" x2="0.401187" y2="0.886182" spreadMethod="pad" gradientUnits="objectBoundingBox" gradientTransform="translate(0 0)"><stop id="e4Y6ufnUCcV8-fill-0" offset="0%" stop-color="#7e93ff"/><stop id="e4Y6ufnUCcV8-fill-1" offset="100%" stop-color="#2d3a79"/></linearGradient><linearGradient id="e4Y6ufnUCcV9-stroke" x1="0" y1="0.5" x2="1" y2="0.5" spreadMethod="pad" gradientUnits="objectBoundingBox" gradientTransform="translate(0 0)"><stop id="e4Y6ufnUCcV9-stroke-0" offset="0%" stop-color="#8fc2ff"/><stop id="e4Y6ufnUCcV9-stroke-1" offset="100%" stop-color="#fff"/></linearGradient></defs><g transform="translate(-42.159327 88.623402)"><ellipse rx="236.187196" ry="236.187196" transform="matrix(1.041057 0 0 1.041057 365.09482 214.948172)" fill="url(#e4Y6ufnUCcV3-fill)" stroke-width="0"/><path d="M-289.230631,17.691864c0-41.934585,146.72516-79.925563,282.736679-79.925563c71.165785,0,79.280268,33.8122,112.894858,48.954408c30.629365,13.797468,91.32542,22.931798,91.32542,42.924803c0,41.934586-104.175262,47.990525-240.186781,47.990525s-246.770176-18.009587-246.770176-59.944173Z" transform="matrix(1 0 0-1 408.651894 430.249953)" fill="url(#e4Y6ufnUCcV4-fill)" stroke-width="0"/><path d="M167.54705,66.547574c5.99317,9.33854,8.61623,13.18372,6.96699,14.83296s-8.85881,5.07631-16.73467-.96648c-19.94914-13.67941-33.35103-74.05855-65.62482-61.45161s16.870812,132.413851,64.690607,179.292928c49.476712,48.503399,71.467306,88.197416,47.893356,134.105946s-91.175367,56.0719-178.836295,34.560016-155.142865-92.174706-192.848658-153.47097c45.0791,12.66686,92.10564,7.40727,132.56973,7.47016-3.44755-4.86612-7.03977-9.78445-10.84177-14.72655-8.47317-11.01402-19.66934-20.15112-31.97509-27.54992c40.61014,1.72239,86.39745,3.08449,123.06741,8.70543c18.31675,2.80768,34.78075,8.7111,49.12945,16.14624-7.13383-10.97956-14.16993-22.88006-20.72163-35.37401-30.17144-57.53623-51.22128-142.43726-14.73489-178.22199s84.181011-17.380012,102.76444,16.49967s9.376559,48.018998.611629,49.816938q1.441135,4.49295,4.624211,10.331242Z" transform="translate(315.646961 44.479304)" fill="url(#e4Y6ufnUCcV5-fill)" stroke-width="5" stroke-miterlimit="36" stroke-dasharray="2648.4"/><path style="isolation:isolate" d="M-172.029167,7.978511c13.642528-44.813079-18.901988-63.643736-6.726297-63.643736s36.109476,29.615062,39.836507,61.535164-.134792,50.165687-14.432377,47.737022-33.14949,4.651894-18.677833-45.62845Z" transform="matrix(.558809-.261874 0.228635 0.487882 551.934789 34.702925)" fill="#0a031b" stroke-width="0"/><path d="M407.475179,108.437143c-4.300322-7.112425-8.576655-18.785549-6.104093-25.026782s14.499741-14.319815,24.221405,9.236525s14.582496,24.491114,14.395541,31.595407-13.590165,11.05286-32.512853-15.80515Z" transform="translate(63.101045 16.934322)" fill="#ff518c" stroke-width="1.28"/><path d="M354.767411,287.339369c18.520077,13.644275,64.300979,44.149314,49.978488,75.523048s-62.603644,47.154916-144.984484,16.556318-152.665178-112.626078-168.769357-137.615322c139.939766,2.221266,185.564581,2.410323,263.775353,45.535956Z" transform="translate(54.090416 14.11876)" fill="url(#e4Y6ufnUCcV8-fill)" stroke-width="1.28"/></g><path d="M220.914252,431.101285c90.2536,15.239556,161.417616,9.003373,184.99156-36.905159s-10.50092-83.273885-59.159254-128.330123-105.616875-169.530414-73.34309-182.137362s45.67567,47.772194,65.624815,61.451608c7.875866,6.042797,15.085439,2.615719,16.734674.966484s-.973821-5.494419-6.966995-14.832957-11.197352-25.187854-13.035023-33.261784-8.540189-19.327793-11.23709-14.383474s4.944319,22.474177,13.709249,20.676243s18.611023-7.022038,5.327031-33.179158-66.278046-52.2844-102.764437-16.49967-15.43655,120.685754,14.734889,178.221986s70.61553,102.487246,83.570615,102.868279-31.730804-71.339778-111.978432-83.640509-204.158148-4.205912-221.923411-24.12454s89.277642-11.045052,130.831092,42.969035s58.048709,105.188894,134.489288,116.390579s50.053405-53.601311-7.7429-85.126568-253.846327-37.402494-253.846327-37.402494s77.082461,142.497371,211.983746,166.279584Z" transform="translate(92.589193 80.626306)" fill="none" stroke="url(#e4Y6ufnUCcV9-stroke)" stroke-width="5" stroke-miterlimit="36" stroke-dashoffset="2659.74" stroke-dasharray="2659.74"/></svg>
+      <!-- Send icon -->
+      <symbol id="icon-send" viewBox="0 0 23.97 21.9">
+        <title>Send</title>
+        <path d="M0.31,9.43a0.5,0.5,0,0,0,0,.93l8.3,3.23L23.15,0Z" />
+        <path
+          d="M9,14.6H9V21.4a0.5,0.5,0,0,0,.93.25L13.22,16l6,3.32A0.5,0.5,0,0,0,20,19l4-18.4Z"
+        />
+      </symbol>
+
+      <!-- Avatar icon -->
+      <symbol id="avatar" width="32" height="32" viewBox="0 0 44.25 44">
+        <title>Avatar</title>
+        <path
+          style="fill: #7226e0; fill-rule: evenodd"
+          d="M1035.88,1696.25a22,22,0,1,1-22.13,22A22.065,22.065,0,0,1,1035.88,1696.25Z"
+          transform="translate(-1013.75 -1696.25)"
+        />
+        <svg
+          id="e4Y6ufnUCcV1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 640 640"
+          shape-rendering="geometricPrecision"
+          text-rendering="geometricPrecision"
+          style="background-color: #fff"
+        >
+          <defs>
+            <linearGradient
+              id="e4Y6ufnUCcV3-fill"
+              x1="0.489361"
+              y1="-0.00383"
+              x2="0.49637"
+              y2="0.706156"
+              spreadMethod="pad"
+              gradientUnits="objectBoundingBox"
+              gradientTransform="translate(0 0)"
+            >
+              <stop id="e4Y6ufnUCcV3-fill-0" offset="0%" stop-color="#152055" />
+              <stop
+                id="e4Y6ufnUCcV3-fill-1"
+                offset="100%"
+                stop-color="#0c0b33"
+              />
+            </linearGradient>
+            <linearGradient
+              id="e4Y6ufnUCcV4-fill"
+              x1="0.205284"
+              y1="-0.273163"
+              x2="0.550399"
+              y2="1.124969"
+              spreadMethod="pad"
+              gradientUnits="objectBoundingBox"
+              gradientTransform="translate(0 0)"
+            >
+              <stop id="e4Y6ufnUCcV4-fill-0" offset="0%" stop-color="#2cdafa" />
+              <stop
+                id="e4Y6ufnUCcV4-fill-1"
+                offset="100%"
+                stop-color="#002b55"
+              />
+            </linearGradient>
+            <linearGradient
+              id="e4Y6ufnUCcV5-fill"
+              x1="0.215154"
+              y1="0.780113"
+              x2="0.756772"
+              y2="0.270218"
+              spreadMethod="pad"
+              gradientUnits="objectBoundingBox"
+              gradientTransform="translate(0 0)"
+            >
+              <stop id="e4Y6ufnUCcV5-fill-0" offset="0%" stop-color="#07103a" />
+              <stop
+                id="e4Y6ufnUCcV5-fill-1"
+                offset="100%"
+                stop-color="#7e93ff"
+              />
+            </linearGradient>
+            <linearGradient
+              id="e4Y6ufnUCcV8-fill"
+              x1="1.636801"
+              y1="-0.552278"
+              x2="0.401187"
+              y2="0.886182"
+              spreadMethod="pad"
+              gradientUnits="objectBoundingBox"
+              gradientTransform="translate(0 0)"
+            >
+              <stop id="e4Y6ufnUCcV8-fill-0" offset="0%" stop-color="#7e93ff" />
+              <stop
+                id="e4Y6ufnUCcV8-fill-1"
+                offset="100%"
+                stop-color="#2d3a79"
+              />
+            </linearGradient>
+            <linearGradient
+              id="e4Y6ufnUCcV9-stroke"
+              x1="0"
+              y1="0.5"
+              x2="1"
+              y2="0.5"
+              spreadMethod="pad"
+              gradientUnits="objectBoundingBox"
+              gradientTransform="translate(0 0)"
+            >
+              <stop
+                id="e4Y6ufnUCcV9-stroke-0"
+                offset="0%"
+                stop-color="#8fc2ff"
+              />
+              <stop
+                id="e4Y6ufnUCcV9-stroke-1"
+                offset="100%"
+                stop-color="#fff"
+              />
+            </linearGradient>
+          </defs>
+          <g transform="translate(-42.159327 88.623402)">
+            <ellipse
+              rx="236.187196"
+              ry="236.187196"
+              transform="matrix(1.041057 0 0 1.041057 365.09482 214.948172)"
+              fill="url(#e4Y6ufnUCcV3-fill)"
+              stroke-width="0"
+            />
+            <path
+              d="M-289.230631,17.691864c0-41.934585,146.72516-79.925563,282.736679-79.925563c71.165785,0,79.280268,33.8122,112.894858,48.954408c30.629365,13.797468,91.32542,22.931798,91.32542,42.924803c0,41.934586-104.175262,47.990525-240.186781,47.990525s-246.770176-18.009587-246.770176-59.944173Z"
+              transform="matrix(1 0 0-1 408.651894 430.249953)"
+              fill="url(#e4Y6ufnUCcV4-fill)"
+              stroke-width="0"
+            />
+            <path
+              d="M167.54705,66.547574c5.99317,9.33854,8.61623,13.18372,6.96699,14.83296s-8.85881,5.07631-16.73467-.96648c-19.94914-13.67941-33.35103-74.05855-65.62482-61.45161s16.870812,132.413851,64.690607,179.292928c49.476712,48.503399,71.467306,88.197416,47.893356,134.105946s-91.175367,56.0719-178.836295,34.560016-155.142865-92.174706-192.848658-153.47097c45.0791,12.66686,92.10564,7.40727,132.56973,7.47016-3.44755-4.86612-7.03977-9.78445-10.84177-14.72655-8.47317-11.01402-19.66934-20.15112-31.97509-27.54992c40.61014,1.72239,86.39745,3.08449,123.06741,8.70543c18.31675,2.80768,34.78075,8.7111,49.12945,16.14624-7.13383-10.97956-14.16993-22.88006-20.72163-35.37401-30.17144-57.53623-51.22128-142.43726-14.73489-178.22199s84.181011-17.380012,102.76444,16.49967s9.376559,48.018998.611629,49.816938q1.441135,4.49295,4.624211,10.331242Z"
+              transform="translate(315.646961 44.479304)"
+              fill="url(#e4Y6ufnUCcV5-fill)"
+              stroke-width="5"
+              stroke-miterlimit="36"
+              stroke-dasharray="2648.4"
+            />
+            <path
+              style="isolation: isolate"
+              d="M-172.029167,7.978511c13.642528-44.813079-18.901988-63.643736-6.726297-63.643736s36.109476,29.615062,39.836507,61.535164-.134792,50.165687-14.432377,47.737022-33.14949,4.651894-18.677833-45.62845Z"
+              transform="matrix(.558809-.261874 0.228635 0.487882 551.934789 34.702925)"
+              fill="#0a031b"
+              stroke-width="0"
+            />
+            <path
+              d="M407.475179,108.437143c-4.300322-7.112425-8.576655-18.785549-6.104093-25.026782s14.499741-14.319815,24.221405,9.236525s14.582496,24.491114,14.395541,31.595407-13.590165,11.05286-32.512853-15.80515Z"
+              transform="translate(63.101045 16.934322)"
+              fill="#ff518c"
+              stroke-width="1.28"
+            />
+            <path
+              d="M354.767411,287.339369c18.520077,13.644275,64.300979,44.149314,49.978488,75.523048s-62.603644,47.154916-144.984484,16.556318-152.665178-112.626078-168.769357-137.615322c139.939766,2.221266,185.564581,2.410323,263.775353,45.535956Z"
+              transform="translate(54.090416 14.11876)"
+              fill="url(#e4Y6ufnUCcV8-fill)"
+              stroke-width="1.28"
+            />
+          </g>
+          <path
+            d="M220.914252,431.101285c90.2536,15.239556,161.417616,9.003373,184.99156-36.905159s-10.50092-83.273885-59.159254-128.330123-105.616875-169.530414-73.34309-182.137362s45.67567,47.772194,65.624815,61.451608c7.875866,6.042797,15.085439,2.615719,16.734674.966484s-.973821-5.494419-6.966995-14.832957-11.197352-25.187854-13.035023-33.261784-8.540189-19.327793-11.23709-14.383474s4.944319,22.474177,13.709249,20.676243s18.611023-7.022038,5.327031-33.179158-66.278046-52.2844-102.764437-16.49967-15.43655,120.685754,14.734889,178.221986s70.61553,102.487246,83.570615,102.868279-31.730804-71.339778-111.978432-83.640509-204.158148-4.205912-221.923411-24.12454s89.277642-11.045052,130.831092,42.969035s58.048709,105.188894,134.489288,116.390579s50.053405-53.601311-7.7429-85.126568-253.846327-37.402494-253.846327-37.402494s77.082461,142.497371,211.983746,166.279584Z"
+            transform="translate(92.589193 80.626306)"
+            fill="none"
+            stroke="url(#e4Y6ufnUCcV9-stroke)"
+            stroke-width="5"
+            stroke-miterlimit="36"
+            stroke-dashoffset="2659.74"
+            stroke-dasharray="2659.74"
+          />
+        </svg>
     </symbol>
-
     </svg>
     <!-- partial -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/fetch/0.10.1/fetch.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/0.10.1/fetch.min.js"></script>
     <script src="./script.js"></script>
-
 </body>
 
 </html>
